force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/DNBoptimizer__DnBExternalRecord__x.object-meta.xml
<CustomObject>
    <externalDataSource>DNBoptimizer__DnB_Optimize</externalDataSource>
    <externalName>DnBExternalRecord</externalName>
    <label>D&amp;B External Record</label>
    <pluralLabel>D&amp;B External Records</pluralLabel>
</CustomObject>