force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__combined_address__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__combined_address__c</fullName>
    <description>Internally used: combined address field</description>
    <label>Combined Address Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>