force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__DnBPrescreenScore__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__DnBPrescreenScore__c</fullName>
    <description>This score - High, Medium, or Low Risk - predicts the likelihood of a firm paying in a severely delinquent manner (90+ days past terms) over the next 12 months, based on statistical models and  payment information in D&amp;B&apos;s commercial database.</description>
    <inlineHelpText>This score - High, Medium, or Low Risk - predicts the likelihood of a firm paying in a severely delinquent manner (90+ days past terms) over the next 12 months, based on statistical models and  payment information in D&amp;B&apos;s commercial database.</inlineHelpText>
    <label>D&amp;B Prescreen Score (call D&amp;B)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>