force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__DomesticUltimateBusinessName__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__DomesticUltimateBusinessName__c</fullName>
    <description>The name of the highest business in the family tree that is in the same country/region as the subject.</description>
    <inlineHelpText>The name of the highest business in the family tree that is in the same country/region as the subject</inlineHelpText>
    <label>Domestic Ultimate Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>