force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__DomesticUltimateDUNSNumber__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__DomesticUltimateDUNSNumber__c</fullName>
    <description>The D-U-N-S Number of the highest level parent within a corporate family tree that is domiciled in the same country/region as the requested company. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock.</description>
    <inlineHelpText>The D-U-N-S Number of the highest level parent within a corporate family tree that is domiciled in the same country/region as the requested company. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock.</inlineHelpText>
    <label>Domestic Ultimate D-U-N-S Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>