force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__DUNSRight_MatchConfidenceCode__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__DUNSRight_MatchConfidenceCode__c</fullName>
    <description>A numeric value from 1 (low) up to 10 (high) indicating the level of certainty at which this possible candidate was included in this result set.</description>
    <inlineHelpText>A numeric value from 1 (low) up to 10 (high) indicating the level of certainty at which this possible candidate was included in this result set.</inlineHelpText>
    <label>Match Score/Confidence Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>