force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__DUNSRight_MatchDataProfile__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__DUNSRight_MatchDataProfile__c</fullName>
    <description>The information that the matching process used to arrive at a match in addition to the application&apos;s business rules and parameters specified by the requestor.  This is a 28-byte string consisting of 14 components of 2 bytes each. The 14 components are, in order, Name, Street Number, Street Name, Town Name, Territory Name, P.O. Box, Telephone, Post Code, D-U-N-S Number, Industry Code, Geographical Density, Location Uniqueness, Registration Number and URL.</description>
    <inlineHelpText>This is a 28-byte string consisting of 14 components of 2 bytes each.</inlineHelpText>
    <label>Match Data Profile</label>
    <length>28</length>
    <type>Text</type>
</CustomField>