force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__DUNSRight_MatchGrade__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__DUNSRight_MatchGrade__c</fullName>
    <description>The compound rating that comprises one rating per type of data scored by a match engine. For example, in AABZBAAAFBZ the &quot;A&quot; in the 1st position means that the Name scored between 80-100 and the &quot;A&quot; in the 2nd position means that the Street Number had to score exactly 100. For more details, please see the Identity Resolution guide.</description>
    <inlineHelpText>The compound rating that comprises one rating per type of data scored by a match engine.</inlineHelpText>
    <label>Match Grade</label>
    <length>11</length>
    <type>Text</type>
</CustomField>