force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__EmployeeCountTotalReliabilityCode__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__EmployeeCountTotalReliabilityCode__c</fullName>
    <description>A code value which describes the reliability of the Employees Total figure.</description>
    <inlineHelpText>A code value which describes the reliability of the Employees Total figure.</inlineHelpText>
    <label>Employee Count Total Reliability Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>