force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__EmployeeCountTrendYear__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__EmployeeCountTrendYear__c</fullName>
    <description>The percentage change of this item as of base year compared to the trend year.</description>
    <inlineHelpText>The percentage change of this item as of base year compared to the trend year</inlineHelpText>
    <label>Employee Count Trend Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>