force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__EmployeesHereReliabilityCode__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__EmployeesHereReliabilityCode__c</fullName>
    <description>A code value which describes the reliability of the Employees Here figure.</description>
    <inlineHelpText>A code value which describes the reliability of the Employees Here figure.</inlineHelpText>
    <label>Employee Count Here Reliability Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>