force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__EmployeesHereReliabilityDescription__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__EmployeesHereReliabilityDescription__c</fullName>
    <description>A description of the reliability of the Employees Here figure.</description>
    <inlineHelpText>A description of the reliability of the Employees Here figure.</inlineHelpText>
    <label>Employee Count Here Reliability Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>