force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__FaxNumber__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__FaxNumber__c</fullName>
    <description>The fax number of the business.</description>
    <inlineHelpText>The fax number of the business.</inlineHelpText>
    <label>Fax Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>