force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__FiscalYearEnd__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__FiscalYearEnd__c</fullName>
    <description>The date when the accounting period ended. If the Reliability Code denotes the figures are projected (future), then this is the date when the accounting period will end.</description>
    <inlineHelpText>The date when the accounting period ended. If the Reliability Code denotes the figures are projected (future), then this is the date when the accounting period will end.</inlineHelpText>
    <label>Fiscal Year End</label>
    <length>12</length>
    <type>Text</type>
</CustomField>