force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__GlobalUltimateIndicator__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__GlobalUltimateIndicator__c</fullName>
    <description>Indicates whether the subject record is the Global Ultimate Parent within their corporate family tree.</description>
    <inlineHelpText>Indicates whether the subject record is the Global Ultimate Parent within their corporate family tree.</inlineHelpText>
    <label>Global Ultimate Indicator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>