force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__ImporterExporterDescription__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__ImporterExporterDescription__c</fullName>
    <description>A description that, if known, identifies whether the business imports goods or services for re-manufacture or sale, exports products or services to a foreign country, and/or is an agent for goods.</description>
    <inlineHelpText>A description that, if known, identifies whether the business imports goods or services for re-manufacture or sale, exports products or services to a foreign country, and/or is an agent for goods.</inlineHelpText>
    <label>Importer Exporter Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>