force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__ImporterExporterIndicator__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__ImporterExporterIndicator__c</fullName>
    <description>A code value that identifies whether the business imports goods or services for re-manufacture or sale, exports products or services to a foreign country, and/or is an agent for goods.</description>
    <inlineHelpText>A code value that identifies whether the business imports goods or services for re-manufacture or sale, exports products or services to a foreign country, and/or is an agent for goods.</inlineHelpText>
    <label>Importer Exporter Indicator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>