force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__IncorporatedDate__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__IncorporatedDate__c</fullName>
    <description>The date on which the registered business was incorporated, as stated in the business registration.</description>
    <inlineHelpText>The date on which the registered business was incorporated, as stated in the business registration.</inlineHelpText>
    <label>Incorporation Date</label>
    <length>4</length>
    <type>Text</type>
</CustomField>