force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__LegalStatusCode__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__LegalStatusCode__c</fullName>
    <description>A code value which describes the legal structure of the business.</description>
    <inlineHelpText>A code value which describes the legal structure of the business.</inlineHelpText>
    <label>Legal Status Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>