force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__LocationType__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__LocationType__c</fullName>
    <description>Identifies the organizational status of a company. Available values are Single location, Headquarters/Parent, and Branch.</description>
    <inlineHelpText>Identifies the organizational status of a company. Available values are Single location, Headquarters/Parent, and Branch.</inlineHelpText>
    <label>Location Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>