force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__MarketableIndicator__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__MarketableIndicator__c</fullName>
    <description>Indicates whether or not the subject record satisfies D&amp;B&apos;s global marketability rules.</description>
    <inlineHelpText>Indicates whether or not the subject record satisfies D&amp;B&apos;s global marketability rules.</inlineHelpText>
    <label>Marketability Indicator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>