force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__MinorityOwnedIndicator__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__MinorityOwnedIndicator__c</fullName>
    <description>When &apos;true&apos; indicates that this organization is certified as a business that is greater than 50% owned by and whose management and daily business operations are controlled by one or more minority group members.</description>
    <inlineHelpText>When &apos;true&apos; indicates that this organization is certified as a business that is greater than 50% owned by and whose management and daily business operations are controlled by one or more minority group members.</inlineHelpText>
    <label>Minority Owned Indicator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>