force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__NAICSDescription1__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__NAICSDescription1__c</fullName>
    <description>The primary North American Industry Classification System (NAICS) description for the business.</description>
    <inlineHelpText>The primary North American Industry Classification System (NAICS) description for the business.</inlineHelpText>
    <label>NAICS Description 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>