force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__NAICSDescription2__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__NAICSDescription2__c</fullName>
    <description>The secondary North American Industry Classification System (NAICS) description for the business.</description>
    <inlineHelpText>The secondary North American Industry Classification System (NAICS) description for the business.</inlineHelpText>
    <label>NAICS Description 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>