force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__NAICSDescription3__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__NAICSDescription3__c</fullName>
    <description>The tertiary North American Industry Classification System (NAICS) description for the business.</description>
    <inlineHelpText>The tertiary North American Industry Classification System (NAICS) description for the business.</inlineHelpText>
    <label>NAICS Description 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>