force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__NationalIdentificationNumber2__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__NationalIdentificationNumber2__c</fullName>
    <description>The business identification number used in some countries for business registration and tax collection.</description>
    <inlineHelpText>The business identification number used in some countries for business registration and tax collection.</inlineHelpText>
    <label>National Identification Number 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>