force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__NationalIdentificationSystem3__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__NationalIdentificationSystem3__c</fullName>
    <description>A description of the type of National ID number 3 provided.</description>
    <inlineHelpText>A description of the type of National ID number 3 provided.</inlineHelpText>
    <label>National Identification System 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>