force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__ParentDUNSNumber__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__ParentDUNSNumber__c</fullName>
    <description>The D-U-N-S number of the parent company. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock; these owned companies are subsidiaries to the parent company.</description>
    <inlineHelpText>The D-U-N-S number of the parent company. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock; these owned companies are subsidiaries to the parent company.</inlineHelpText>
    <label>Parent D-U-N-S Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>