force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__PrimaryCityName__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__PrimaryCityName__c</fullName>
    <description>The name of the city where the business is physically located.</description>
    <inlineHelpText>The name of the city where the business is physically located.</inlineHelpText>
    <label>Primary Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>