force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__PrimaryCountryCode__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__PrimaryCountryCode__c</fullName>
    <description>The two-letter country/region code, defined by the International Organization for Standardization (ISO) ISO 3166-1 scheme, identifying the country/region of the business entity.</description>
    <inlineHelpText>The two-letter country/region code, defined by the International Organization for Standardization (ISO) ISO 3166-1 scheme, identifying the country/region of the business entity.</inlineHelpText>
    <label>Primary Address Country/Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>