force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__PrimaryCountryCode_ISO__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__PrimaryCountryCode_ISO__c</fullName>
    <description>Primary Address Country/Region Code normalized by the Salesforce ISO Service</description>
    <label>Primary Address Country/Region Code ISO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>