force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__PrimaryCountryName__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__PrimaryCountryName__c</fullName>
    <description>The name of the country/region where the business is physically located.</description>
    <inlineHelpText>The name of the country/region where the business is physically located.</inlineHelpText>
    <label>Primary Address Country/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>