force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__PrimaryOwns_RentsCode__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__PrimaryOwns_RentsCode__c</fullName>
    <description>A code value that denotes if the business owns or rents the building it occupies.</description>
    <inlineHelpText>A code value that denotes if the business owns or rents the building it occupies.</inlineHelpText>
    <label>Primary Address Owns/Rents Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>